--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -14,6 +14,7 @@ header {
   align-items: center;
   padding: 0rem 10rem;
   z-index: 99;
+  margin: 0;
 
   .logo {
     flex: 50%;
@@ -44,7 +45,9 @@ header {
 .fixed-style {
   position: fixed;
   margin: 0;
-  background-color: rgba(v.$color-lowlight, 0.95);
+  padding: 0;
+  background-color: rgba(v.$color-bg, 0.95);
+  border-bottom: 1px solid v.$color-low;
   .logo {
     img {
       height: 5rem !important;
@@ -52,7 +55,7 @@ header {
   }
 
   a.nav_link {
-    font-size: 0.9rem !important;
+    font-size: 0.95rem !important;
   }
 }
 
@@ -60,4 +63,10 @@ header {
   img {
     // height: 5rem !important;
   }
+}
+
+.active {
+  background-color: v.$color-low;
+  padding: 0;
+  z-index: -2;
 }
