--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -24,18 +24,23 @@
   section {
     scroll-margin-top: 3rem;
   }
-  .nav {
-    background-color: v.$color-low;
-    position: fixed;
-    bottom: 4.5rem;
-    left: 0;
-    padding: 0;
+  #navigation {
+    background-color: v.$color-acc-high;
+    height: 3rem;
+    width: 100vw;
     margin: 0 auto;
-    width: 100%;
-    // flex: 100%;
-    // display: flex;
-    justify-content: space-around;
-    li.nav_item {
+    padding: 0;
+    position: fixed;
+    bottom: 4rem;
+    .logo {
+      flex: 1%;
+      img {
+        display: none;
+      }
+    }
+    ul.nav {
+      flex: 99%;
+      justify-content: space-evenly;
       a.nav_link {
         &::before {
           display: none;
