--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -634,6 +634,129 @@ li:last-child {
   margin-right: 0;
 }
 
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 999; /* Sit on top */
+  padding-top: 0; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.6); /* Black w/ opacity */
+  filter: blur(60);
+}
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #1b262c;
+  margin: auto;
+  padding: 0;
+  width: 80%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s;
+  color: #bbe1fa;
+}
+.modal-content h1 {
+  margin-top: 0;
+  margin-bottom: 2rem;
+}
+.modal-content h5 {
+  margin-top: 2rem;
+  margin-bottom: 0rem;
+  font-weight: 300;
+}
+.modal-content ul {
+  margin-top: 0;
+}
+.modal-content ul li {
+  font-weight: 300;
+}
+
+@media (max-width: 486px) {
+  .modal-content {
+    width: 100%;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+  .modal-content p {
+    font-size: 0.875rem;
+    line-height: 1.2rem;
+  }
+  .modal-content h1,
+.modal-content h5,
+.modal-content p {
+    text-align: center;
+  }
+  .modal-content li {
+    font-size: 0.875rem;
+  }
+  .modal-content .modal-header {
+    position: fixed;
+    top: 1rem;
+    right: 1rem;
+    height: 1rem;
+    z-index: 999;
+  }
+}
+.project0-case .project-case--img {
+  width: 100%;
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
+}
+@keyframes animatetop {
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
+}
+/* The Close Button */
+.close {
+  color: #bbe1fa;
+  float: right;
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #3282b8;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-header {
+  background-color: #1b262c;
+  border: none;
+  outline: none;
+  height: auto;
+}
+
+.modal-body {
+  background-color: #1b262c;
+}
+
 @media (max-width: 1024px) {
   #navigation {
     padding: 0 5rem;
