--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -986,7 +986,7 @@ section .section-heading {
 }
 
 section#skills {
-  scroll-margin-top: 250px;
+  scroll-margin-top: 225px;
 }
 
 .space-around {
@@ -1022,6 +1022,7 @@ section#skills {
   align-items: center;
   text-transform: lowercase;
   font-family: "Catamaran", sans-serif;
+  padding: 10px 20px;
 }
 
 /*# sourceMappingURL=main.css.map */
