--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -262,14 +262,14 @@ header {
   margin: 0;
 }
 #navigation .logo {
-  flex: 50%;
+  flex: 30%;
 }
 #navigation .logo img {
   height: 7rem;
   padding: 1rem;
 }
 #navigation ul.nav {
-  flex: 50%;
+  flex: 70%;
   display: flex;
   justify-content: flex-end;
 }
@@ -1010,7 +1010,7 @@ section#skills {
   position: absolute;
   top: 0;
   right: -1rem;
-  width: 50%;
+  width: 5rem;
   height: 20%;
   background-color: #ee964b;
   color: #1b262c;
@@ -1022,7 +1022,7 @@ section#skills {
   align-items: center;
   text-transform: lowercase;
   font-family: "Catamaran", sans-serif;
-  padding: 10px 20px;
+  padding: 10px 30px !important;
 }
 
 /*# sourceMappingURL=main.css.map */
