--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -7,13 +7,14 @@ img.about {
 
 .mdj-btn {
   position: relative;
-  font-size: 1.2rem;
-  font-weight: 400;
+  font-size: 1.1rem;
+  font-weight: 300;
   color: v.$color-text;
   text-decoration: none;
   display: inline;
   transition: all 0.3s;
   padding: 5px 15px;
+  margin-right: 3px;
 
   &:after {
     content: "";
@@ -23,9 +24,10 @@ img.about {
     width: 100%;
     height: 100%;
     background-color: v.$color-low;
-    transform: scale(0);
+    transform: scale(1);
     transform-origin: center;
-    opacity: 0;
+    opacity: 0.2;
+    border: 2px solid v.$color-high;
     transition: 0.5s;
     z-index: -1;
   }
@@ -37,7 +39,8 @@ img.about {
       opacity: 0.25;
     }
     &:after {
-      transform: scale(1) rotate(3deg);
+      transform: scale(1.1) rotate(2deg);
+      border: 1px solid v.$color-bg;
       opacity: 0.9;
     }
   }
