--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -118,10 +118,25 @@
       }
     }
   }
+
+  .cta {
+    margin-top: 3rem;
+  }
+  // .header--content-frist {
+  //   order: 2;
+  // }
+  // .header--content-second {
+  //   order: 1;
+  // }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 576px) {
   section {
-    scroll-margin-top: 0;
+    scroll-margin-top: -200px;
+    padding: 0;
+    margin: 0;
+  }
+  .cta {
+    margin-top: 1rem;
   }
 }
