--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -9,6 +9,7 @@
 @use "snippets/nav_buttons";
 @use "modal";
 @use "responsive";
+@use "animation";
 @import "reset";
 
 $spacer: 2rem;
@@ -100,4 +101,34 @@ section#skills {
   text-transform: lowercase;
   font-family: ty.$font-cata;
   padding: 10px 30px !important;
+}
+
+// BUTTONS
+.cta-text {
+  width: 100%;
+  display: inline-block;
+  text-align: center;
+  color: v.$color-text;
+  &::after {
+    position: absolute;
+    content: "";
+    left: calc(50% - 20px);
+    bottom: -38px;
+    background: url("../img/icons8-chevron-down-30.png");
+    background-size: contain;
+    width: 30px;
+    height: 30px;
+  }
+}
+.cta-button {
+  position: relative;
+  width: 100%;
+  display: inline;
+  color: inherit;
+  text-decoration: none;
+  text-align: center;
+}
+
+.cta {
+  margin-top: 5rem;
 }
