--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -83,6 +83,10 @@ section#skills {
   transition-delay: 0.3s;
 }
 
+.img-600 {
+  max-height: 600px;
+}
+
 //WIDGET CLASSES
 .still-learning {
   position: absolute;
