--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -135,8 +135,14 @@
     scroll-margin-top: -200px;
     padding: 0;
     margin: 0;
+    margin-top: 1rem !important;
   }
   .cta {
-    margin-top: 1rem;
+    margin-top: 0;
+  }
+
+  .img-600 {
+    max-height: 400px !important;
+    margin: 0 auto;
   }
 }
