--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -665,14 +665,14 @@ a.nav_link.active::after {
     padding: 10px 20px !important;
   }
   .section-heading {
-    max-width: 50%;
-    padding-bottom: 5vh;
+    max-width: 66%;
+    padding-bottom: 10vh;
   }
   section {
     margin-top: 10vh;
   }
 }
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   .container {
     margin: 0;
     padding: 0;
@@ -754,17 +754,28 @@ section {
   }
 }
 @media (max-width: 576px) {
+  .container {
+    max-width: 85vw !important;
+  }
   section {
     padding: 0;
     margin: 0;
     margin-top: 1rem !important;
   }
+  section .section-heading {
+    max-width: 90%;
+    padding-bottom: 10vh !important;
+  }
+  #post-introduction {
+    margin-bottom: 2rem;
+  }
   .cta {
     margin-top: 0;
   }
   .img-600 {
-    max-height: 400px !important;
+    max-height: 300px !important;
     margin: 0 auto;
+    margin-top: -80px;
   }
 }
 /* The typewriter cursor effect */
@@ -1242,6 +1253,7 @@ section {
   margin-top: 10vh;
   margin-bottom: 10vh;
   scroll-margin-top: 10vh;
+  min-height: calc(100vh - 8rem);
 }
 section .section-heading {
   position: relative;
@@ -1249,7 +1261,7 @@ section .section-heading {
   font-size: clamp(2.375rem, 1.706rem + 2.745vw, 5rem);
   color: #3282b8;
   margin: 0 auto;
-  margin-bottom: 10vh;
+  padding-bottom: 20vh;
   transform: rotate(3deg);
 }
 
@@ -1321,6 +1333,11 @@ section .section-heading {
 
 .cta {
   margin-top: 5rem;
+}
+
+.cta-htext {
+  margin-bottom: 10vh;
+  text-align: center;
 }
 
 /*# sourceMappingURL=main.css.map */
