about page content

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -767,7 +767,7 @@ section {
     padding-bottom: 10vh !important;
   }
   #post-introduction {
-    margin-bottom: 2rem;
+    margin-bottom: 30vh;
   }
   .cta {
     margin-top: 0;
